# bq_sync

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: bq_sync.toml
src/bq_sync/: __init__.py  bq_client.py  cli.py  config.py  fetch.py  humanize.py  pull.py  push.py  resources.py  writers.py
tests/: test_config.py  test_csv_fetch.py  test_fetch.py  test_writers.py
